--- a/main.html
+++ b/main.html
@@ -106,9 +106,13 @@
       <h1 style="text-align:left; margin-left: 30px;">About UniMates</h1>
       <br>
       <div class="a">
-        <p style="margin-left: 80px; text-align: left;">Moving to Canada could be difficult, and this website aims to make this shift easier than ever. The founders and the team were also one of these many people who found it
-          difficult to move in the beginning. This is why the team has created this easy to use and an all-in-one website that will help international students to quickly set into Canada without much struggles.  </p>
-      </div>
+          <p style="margin-left: 80px; text-align: left; font-size: 25px; font-family: 'Times New Roman', Times, serif;">Shifting to another country from your homeland and entering
+          a multi-cultured society could be difficult. Even the founders and the team mates had faced a similar struggle 
+          and were not able to easily find resources to adjust to this new and wonderful part of their journey. This led us
+          creating UniMates, an all-in-one website which guides the international students to easily adjust to this new 
+          lifetsyle. 
+          </p>
+        </div>
       <br>
       <br>
     </div>
